--- a/translation/de/sabbamitta/sutta/an/an7/an7.69_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.69_translation-de-sabbamitta.json
@@ -19,7 +19,7 @@
   "an7.69:8.1": "Ebenso ist ein edler Schüler, wenn er vorhat, aus dem Haus fortzuziehen ins hauslose Leben, wie der Sonnenschirm-Orchideenbaum, wenn seine Blätter braun werden. ",
   "an7.69:9.1": "Wenn ein edler Schüler sich Haar und Bart rasiert, ockerfarbene Roben anlegt und aus dem Haus fortzieht ins hauslose Leben, ist er wie der Sonnenschirm-Orchideenbaum, wenn seine Blätter fallen. ",
   "an7.69:10.1": "Wenn ein edler Schüler, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung eintritt und darin verweilt – wo es die Ekstase und die Wonne der Abgeschiedenheit gibt, während er den Geist ausrichtet und hält –, ",
-  "an7.69:10.2": "dann ist sie wie der Sonnenschirm-Orchideenbaum, wenn er neu auszutreiben beginnt. ",
+  "an7.69:10.2": "dann ist er wie der Sonnenschirm-Orchideenbaum, wenn er neu auszutreiben beginnt. ",
   "an7.69:11.1": "Wenn eine edle Schülerin, wenn das Ausrichten und Halten des Geistes sich beruhigt, in die zweite Vertiefung eintritt und darin verweilt – wo es die Ekstase und die Wonne der Versenkung gibt, mit innerer Klarheit und Zuversicht und geeintem Geist, ohne Ausrichten und Halten –, ",
   "an7.69:11.2": "dann ist sie wie der Sonnenschirm-Orchideenbaum, wenn sich die Knospenansätze bilden. ",
   "an7.69:12.1": "Wenn eine edle Schülerin mit dem Schwinden der Ekstase in die dritte Vertiefung eintritt und darin verweilt – wo sie mit Gleichmut meditiert, achtsam und umsichtig, und persönlich die Wonne erfährt, von der die Edlen erklären: ‚Gleichmütig und achtsam meditiert man in Wonne‘ –, ",
