--- a/translation/de/sabbamitta/sutta/an/an7/an7.69_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.69_translation-de-sabbamitta.json
@@ -27,7 +27,7 @@
   "an7.69:13.1": "Wenn ein edler Schüler Glück und Schmerz aufgibt und frühere Fröhlichkeit und Traurigkeit beendet und so in die vierte Vertiefung eintritt und darin verweilt – ohne Glück oder Schmerz, mit reinem Gleichmut und reiner Achtsamkeit –, ",
   "an7.69:13.2": "dann ist er wie der Sonnenschirm-Orchideenbaum, wenn die Knospen aufbrechen. ",
   "an7.69:14.1": "Wenn ein edler Schüler mit der Auflösung der Befleckungen in diesem Leben die fleckenlose Freiheit des Herzens erlangt, die fleckenlose Freiheit durch Weisheit, sie durch eigene Einsicht erkennt und darin lebt, ",
-  "an7.69:14.2": "dann ist sie wie der Sonnenschirm-Orchideenbaum, wenn er in voller Blüte steht. ",
+  "an7.69:14.2": "dann ist er wie der Sonnenschirm-Orchideenbaum, wenn er in voller Blüte steht. ",
   "an7.69:15.1": "Zu dieser Zeit erheben die Erdgötter den Ruf: ",
   "an7.69:15.2": "‚Diese Ehrwürdige mit Namen Soundso von diesem Dorf oder jener Stadt, die Schülerin der Ehrwürdigen mit Namen Soundso, ist aus dem Haus fortgezogen ins hauslose Leben. Sie hat mit der Auflösung der Befleckungen in diesem Leben die fleckenlose Freiheit des Herzens erlangt, die fleckenlose Freiheit durch Weisheit, hat sie durch eigene Einsicht erkannt und lebt darin.‘ ",
   "an7.69:16.1": "Wenn sie den Ruf der Erdgötter hören, erheben die Götter der Vier Großen Könige … ",
