--- a/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
@@ -92,7 +92,7 @@
   "an3.70:12.1": "Und wie läutert man einen verunreinigten Geist, indem man Mühe aufwendet? ",
   "an3.70:12.2": "Da besinnt sich ein edler Schüler auf den Saṅgha: ",
   "an3.70:12.3": "‚Der Saṅgha der Schüler des Buddha übt gut, unmittelbar, nach der Methode und auf die richtige Art. Er besteht aus den vier Paaren, den acht Personen. Das ist der Saṅgha der Schüler des Buddha, und er ist einer den Göttern gewidmeten Gabe würdig, der Gastfreundschaft würdig, einer religiösen Gabe würdig, des Grußes mit zusammengelegten Händen würdig und ist das unübertreffliche Feld für Verdienst für die Welt.‘ ",
-  "an3.70:12.4": "Während sie sich auf den Saṅgha besinnt, wird ihr Geist klar, Freude kommt auf und die Verunreinigungen des Geistes lösen sich auf. ",
+  "an3.70:12.4": "Während er sich auf den Saṅgha besinnt, wird sein Geist klar, Freude kommt auf und die Verunreinigungen des Geistes lösen sich auf. ",
   "an3.70:12.5": "Das nennt man eine edle Schülerin, die den Besinnungstag des Saṅgha einhält, die mit dem Saṅgha lebt, die an den Saṅgha denkt, deren Geist dadurch klar wird, bei der Freude aufkommt und die Verunreinigungen des Geistes sich auflösen. ",
   "an3.70:12.6": "So läutert man einen verunreinigten Geist, indem man Mühe aufwendet. ",
   "an3.70:13.1": "Ein verunreinigter Geist wird geläutert, indem man Mühe aufwendet. ",
