--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.50_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn22.50:1.3": "Da ging der Hausbesitzer Soṇa zum Buddha, verbeugte sich und setzte sich zur Seite hin. Der Buddha sagte zu ihm: ",
   "sn22.50:2.1": "„Soṇa, es gibt Asketen und Brahmanen, die Form nicht verstehen, nicht ihren Ursprung, nicht ihr Aufhören und nicht die Übung, die zu ihrem Aufhören führt. ",
   "sn22.50:2.2": "Sie verstehen Gefühl nicht … ",
-  "sn22.50:2.3": "Sie verstehen Wahrnehmung nicht … "
+  "sn22.50:2.3": "Sie verstehen Wahrnehmung nicht … ",
+  "sn22.50:2.4": "Sie verstehen Entscheidungen nicht … "
 }
