--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.50_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn22.50:2.2": "Sie verstehen Gefühl nicht … ",
   "sn22.50:2.3": "Sie verstehen Wahrnehmung nicht … ",
   "sn22.50:2.4": "Sie verstehen Entscheidungen nicht … ",
-  "sn22.50:2.5": "Sie verstehen Bewusstsein nicht, nicht seinen Ursprung, nicht sein Aufhören und nicht die Übung, die zu seinem Aufhören führt. "
+  "sn22.50:2.5": "Sie verstehen Bewusstsein nicht, nicht seinen Ursprung, nicht sein Aufhören und nicht die Übung, die zu seinem Aufhören führt. ",
+  "sn22.50:2.6": "Sie betrachte ich nicht als wahre Asketen und Brahmanen. Diese Ehrwürdigen verwirklichen nicht das Ziel des Lebens als Asket oder Brahmane, sie leben nicht darin, nachdem sie es mit ihrer eigenen Einsicht erkannt haben. "
 }
