--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.50_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.50:2.4": "Sie verstehen Entscheidungen nicht … ",
   "sn22.50:2.5": "Sie verstehen Bewusstsein nicht, nicht seinen Ursprung, nicht sein Aufhören und nicht die Übung, die zu seinem Aufhören führt. ",
   "sn22.50:2.6": "Sie betrachte ich nicht als wahre Asketen und Brahmanen. Diese Ehrwürdigen verwirklichen nicht das Ziel des Lebens als Asket oder Brahmane, sie leben nicht darin, nachdem sie es mit ihrer eigenen Einsicht erkannt haben. ",
-  "sn22.50:3.1": "Es gibt Asketen und Brahmanen, die Form verstehen, ihren Ursprung, ihr Aufhören und die Übung, die zu ihrem Aufhören führt. "
+  "sn22.50:3.1": "Es gibt Asketen und Brahmanen, die Form verstehen, ihren Ursprung, ihr Aufhören und die Übung, die zu ihrem Aufhören führt. ",
+  "sn22.50:3.2": "Sie verstehen Gefühl … "
 }
