--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.50_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn22.50:3.1": "Es gibt Asketen und Brahmanen, die Form verstehen, ihren Ursprung, ihr Aufhören und die Übung, die zu ihrem Aufhören führt. ",
   "sn22.50:3.2": "Sie verstehen Gefühl … ",
   "sn22.50:3.3": "Sie verstehen Wahrnehmung … ",
-  "sn22.50:3.4": "Sie verstehen Entscheidungen … "
+  "sn22.50:3.4": "Sie verstehen Entscheidungen … ",
+  "sn22.50:3.5": "Sie verstehen Bewusstsein, seinen Ursprung, sein Aufhören und die Übung, die zu seinem Aufhören führt. "
 }
