--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.51_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn22.51:0.1": "Verbundene Lehrreden 22.51 "
+  "sn22.51:0.1": "Verbundene Lehrreden 22.51 ",
+  "sn22.51:0.2": "5. Das Kapitel darüber, deine eigene Insel zu sein "
 }
