--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.51_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.51:0.2": "5. Das Kapitel darüber, deine eigene Insel zu sein ",
   "sn22.51:0.3": "Das Ende des Genießens ",
   "sn22.51:1.1": "In Sāvatthī. ",
-  "sn22.51:1.2": "„Mönche und Nonnen, Form ist wirklich unbeständig. Ein Mönch sieht, dass sie unbeständig ist: Das ist seine rechte Ansicht. "
+  "sn22.51:1.2": "„Mönche und Nonnen, Form ist wirklich unbeständig. Ein Mönch sieht, dass sie unbeständig ist: Das ist seine rechte Ansicht. ",
+  "sn22.51:1.3": "Wenn er richtig sieht, wird er ernüchtert. "
 }
