--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.51_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn22.51:1.1": "In Sāvatthī. ",
   "sn22.51:1.2": "„Mönche und Nonnen, Form ist wirklich unbeständig. Ein Mönch sieht, dass sie unbeständig ist: Das ist seine rechte Ansicht. ",
   "sn22.51:1.3": "Wenn er richtig sieht, wird er ernüchtert. ",
-  "sn22.51:1.4": "Wenn Genießen endet, endet Gier. Wenn Gier endet, endet Genießen. "
+  "sn22.51:1.4": "Wenn Genießen endet, endet Gier. Wenn Gier endet, endet Genießen. ",
+  "sn22.51:1.5": "Wenn Genießen und Gier enden, ist der Geist befreit und gilt als gut befreit. "
 }
