--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.51_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn22.51:1.3": "Wenn er richtig sieht, wird er ernüchtert. ",
   "sn22.51:1.4": "Wenn Genießen endet, endet Gier. Wenn Gier endet, endet Genießen. ",
   "sn22.51:1.5": "Wenn Genießen und Gier enden, ist der Geist befreit und gilt als gut befreit. ",
-  "sn22.51:1.6": "Gefühl ist wirklich unbeständig … "
+  "sn22.51:1.6": "Gefühl ist wirklich unbeständig … ",
+  "sn22.51:1.10": "Wahrnehmung ist wirklich unbeständig … "
 }
