--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.51_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn22.51:1.11": "Entscheidungen sind wirklich unbeständig … ",
   "sn22.51:1.15": "Bewusstsein ist wirklich unbeständig. Ein Mönch sieht, dass es unbeständig ist: Das ist seine rechte Ansicht. ",
   "sn22.51:1.16": "Wenn er richtig sieht, wird er ernüchtert. ",
-  "sn22.51:1.17": "Wenn Genießen endet, endet Gier. Wenn Gier endet, endet Genießen. "
+  "sn22.51:1.17": "Wenn Genießen endet, endet Gier. Wenn Gier endet, endet Genießen. ",
+  "sn22.51:1.18": "Wenn Genießen und Gier enden, ist der Geist befreit und gilt als gut befreit.“ "
 }
