--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.52_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.52_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn22.52:0.1": "Verbundene Lehrreden 22.52 ",
-  "sn22.52:0.2": "5. Das Kapitel darüber, deine eigene Insel zu sein "
+  "sn22.52:0.2": "5. Das Kapitel darüber, deine eigene Insel zu sein ",
+  "sn22.52:0.3": "Das Ende des Genießens (2) "
 }
