--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.52_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.52_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn22.52:1.1": "In Sāvatthī. ",
   "sn22.52:1.2": "„Mönche und Nonnen, befasst euch korrekt mit From. Seht wahrhaftig die Unbeständigkeit der Form. ",
   "sn22.52:1.3": "Wenn eine Nonne das tut, wird sie von der Form ernüchtert. ",
-  "sn22.52:1.4": "Wenn Genießen endet, endet Gier. Wenn Gier endet, endet Genießen. "
+  "sn22.52:1.4": "Wenn Genießen endet, endet Gier. Wenn Gier endet, endet Genießen. ",
+  "sn22.52:1.5": "Wenn Genießen und Gier enden, ist der Geist befreit und gilt als gut befreit. "
 }
