--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.52_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.52_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.52:1.10": "Befasst euch korrekt mit Wahrnehmung … ",
   "sn22.52:1.11": "Befasst euch korrekt mit Entscheidungen … ",
   "sn22.52:1.15": "Befasst euch korrekt mit Bewusstsein. Seht wahrhaftig die Unbeständigkeit des Bewusstseins. ",
-  "sn22.52:1.16": "Wenn eine Nonne das tut, wird sie vom Bewusstsein ernüchtert. "
+  "sn22.52:1.16": "Wenn eine Nonne das tut, wird sie vom Bewusstsein ernüchtert. ",
+  "sn22.52:1.17": "Wenn Genießen endet, endet Gier. Wenn Gier endet, endet Genießen. "
 }
