--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.59_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.59_translation-de-sabbamitta.json
@@ -1,6 +1,6 @@
 {
   "sn22.59:0.1": "Verbundene Lehrreden 22.59 ",
-  "sn22.59:0.2": "6. Das Kapitel über Gebundenheit ",
+  "sn22.59:0.2": "6. Das Kapitel über Einbindung ",
   "sn22.59:0.3": "Kennzeichen des Nicht-Selbst ",
   "sn22.59:1.1": "Einmal hielt sich der Buddha bei Benares auf, im Wildpark bei Isipatana. ",
   "sn22.59:1.2": "Da wandte sich der Buddha an die Gruppe der fünf Mönche: ",
