--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn22.53:0.1": "Verbundene Lehrreden 22.53 ",
   "sn22.53:0.2": "6. Das Kapitel über Einbindung ",
   "sn22.53:0.3": "Einbindung ",
-  "sn22.53:1.1": "In Sāvatthī. "
+  "sn22.53:1.1": "In Sāvatthī. ",
+  "sn22.53:1.2": "„Mönche und Nonnen, wenn ihr eingebunden seid, seid ihr nicht frei. Wenn ihr nicht eingebunden seid, seid ihr frei. "
 }
