--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -363,7 +363,7 @@
   "dn33:1.11.121": "Feste Nahrung, grob oder fein; Berührung ist die zweite, eine Absicht im Geist die dritte und Bewusstsein die vierte. ",
   "dn33:1.11.122": "Vier Grundlagen, auf denen Bewusstsein besteht: ",
   "dn33:1.11.123": "Solange Bewusstsein besteht, besteht es eingebunden in Form, getragen von Form, gegründet auf Form. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. ",
-  "dn33:1.11.124": "Oder Bewusstsein besteht an Gefühl gebunden … ",
+  "dn33:1.11.124": "Oder Bewusstsein besteht eingebunden in Gefühl … ",
   "dn33:1.11.125": "Oder Bewusstsein besteht an Wahrnehmung gebunden … ",
   "dn33:1.11.126": "Oder, solange Bewusstsein besteht, besteht es an Entscheidungen gebunden, von Entscheidungen getragen, auf Entscheidungen gegründet. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. ",
   "dn33:1.11.127": "Vier Arten, voreingenommen zu handeln: ",
