--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn22.53:1.2": "„Mönche und Nonnen, wenn ihr eingebunden seid, seid ihr nicht frei. Wenn ihr nicht eingebunden seid, seid ihr frei. ",
   "sn22.53:1.3": "Solange Bewusstsein besteht, besteht es eingebunden in Form, getragen von Form, gegründet auf Form. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. ",
   "sn22.53:1.4": "Oder, solange Bewusstsein besteht, besteht es eingebunden in Gefühl … ",
-  "sn22.53:1.5": "Oder, solange Bewusstsein besteht, besteht es eingebunden in Wahrnehmung … "
+  "sn22.53:1.5": "Oder, solange Bewusstsein besteht, besteht es eingebunden in Wahrnehmung … ",
+  "sn22.53:1.6": "Oder, solange Bewusstsein besteht, besteht es eingebunden in Entscheidungen, getragen von Entscheidungen, gegründet auf Entscheidungen. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. "
 }
