--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -186,5 +186,6 @@
   "mn9:56-58.2": "“लेकिन आदरणीय, कोइ दूसरी रीति है जिस से आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है”?",
   "mn9:56-58.3": "“है, आदरणीयो।",
   "mn9:56-58.4": "जब आर्यसाधक ग्रहण को समझता है, ग्रहण के उदय को समझता है, ग्रहण के निरोध को समझता है, ग्रहण के निरोध की ओर ले जानेवाले मार्ग को समझता है—",
-  "mn9:56-58.5": "तब आदरणीयो, आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है।"
+  "mn9:56-58.5": "तब आदरणीयो, आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है।",
+  "mn9:56-58.6": "आदरणीयो, चैतन्य क्या है, चैतन्य का उदय क्या है, चैतन्य का निरोध क्या है, चैतन्य के निरोध की ओर ले जानेवाला मार्ग क्या है?"
 }
