--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn22.53:3.1": "Wenn ein Mönch Gier nach dem Element der Form aufgegeben hat, ",
   "sn22.53:3.2": "ist dessen Grundlage abgeschnitten, und das Bewusstsein wird nicht verankert. ",
   "sn22.53:3.3": "Wenn ein Mönch Gier nach dem Element des Gefühls aufgegeben hat … ",
-  "sn22.53:3.4": "Wenn ein Mönch Gier nach dem Element der Wahrnehmung aufgegeben hat … "
+  "sn22.53:3.4": "Wenn ein Mönch Gier nach dem Element der Wahrnehmung aufgegeben hat … ",
+  "sn22.53:3.5": "Wenn ein Mönch Gier nach dem Element der Entscheidungen aufgegeben hat … "
 }
