--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "sn22.53:1.4": "Oder, solange Bewusstsein besteht, besteht es eingebunden in Gefühl … ",
   "sn22.53:1.5": "Oder, solange Bewusstsein besteht, besteht es eingebunden in Wahrnehmung … ",
   "sn22.53:1.6": "Oder, solange Bewusstsein besteht, besteht es eingebunden in Entscheidungen, getragen von Entscheidungen, gegründet auf Entscheidungen. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. ",
-  "sn22.53:2.1": "„Mönche und Nonnen, angenommen, da würde jemand sagen: ",
+  "sn22.53:2.1": "Mönche und Nonnen, angenommen, da würde jemand sagen: ",
   "sn22.53:2.2": "‚Ich will außerhalb von Form, Gefühl, Wahrnehmung und Entscheidungen das Kommen und Gehen von Bewusstsein beschreiben, sein Sterben und Wiedererscheinen, sein Wachsen, Größerwerden und Zur-Reife-Kommen.‘ Das ist nicht möglich. ",
   "sn22.53:3.1": "Wenn ein Mönch Gier nach dem Element der Form aufgegeben hat, ",
   "sn22.53:3.2": "ist dessen Grundlage abgeschnitten, und das Bewusstsein wird nicht verankert. ",
