--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.53_translation-de-sabbamitta.json
@@ -6,7 +6,7 @@
   "sn22.53:1.2": "„Mönche und Nonnen, wenn ihr eingebunden seid, seid ihr nicht frei. Wenn ihr nicht eingebunden seid, seid ihr frei. ",
   "sn22.53:1.3": "Solange Bewusstsein besteht, besteht es eingebunden in Form, getragen von Form, gegründet auf Form. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. ",
   "sn22.53:1.4": "Oder Bewusstsein besteht, solange es besteht, eingebunden in Gefühl … ",
-  "sn22.53:1.5": "Oder, solange Bewusstsein besteht, besteht es eingebunden in Wahrnehmung … ",
+  "sn22.53:1.5": "Oder Bewusstsein besteht, solange es besteht, eingebunden in Wahrnehmung … ",
   "sn22.53:1.6": "Oder, solange Bewusstsein besteht, besteht es eingebunden in Entscheidungen, getragen von Entscheidungen, gegründet auf Entscheidungen. Und wenn es von Genießen befeuchtet wird, wächst es, wird größer und kommt zur Reife. ",
   "sn22.53:2.1": "Mönche und Nonnen, angenommen, da würde jemand sagen: ",
   "sn22.53:2.2": "‚Ich will außerhalb von Form, Gefühl, Wahrnehmung und Entscheidungen das Kommen und Gehen von Bewusstsein beschreiben, sein Sterben und Wiedererscheinen, sein Wachsen, Größerwerden und Zur-Reife-Kommen.‘ Das ist nicht möglich. ",
